<resources>
    <string name="app_name">WeatherApplication</string>
    <string name="sunriseStr">Sunrise</string>
    <string name="infoStr">Info</string>
    <string name="pressureStr">Pressure</string>
    <string name="sunsetStr">Sunset</string>
    <string name="humidityStr">Humidity</string>
    <string name="windStr">Wind</string>
    <string name="submitButtonStr">Submit</string>
</resources>
